<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb1_1" />

            <RadioButton
                android:id="@+id/rb1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb1_2" />

            <RadioButton
                android:id="@+id/rb1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb1_3" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rb2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb2_1" />

            <RadioButton
                android:id="@+id/rb2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb2_2" />

            <RadioButton
                android:id="@+id/rb2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb2_3" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rb3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb3_1_1" />

            <RadioButton
                android:id="@+id/rb3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb3_1_2" />

            <RadioButton
                android:id="@+id/rb3_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb3_1_3" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>